## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = yabe

yabe_SOURCES = \
	main.cc

yabe_LDFLAGS = 

yabe_LDADD = 

